--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
       <div class="hero" >
-        <h1><i>i,m  passionate about </i> <b id="footer">web development</b></h1>
+        <h1><i>i'm  passionate about </i> <b id="footer">web development</b></h1>
       <div class="social-links">
              <a href="#"><i class="fa-brands fa-facebook"></i></a>
              <a href="https://twitter.com/jvsk1411?t=1mWChh-GpE1VIYf59-OplQ&s=09"><i class="fa-brands fa-twitter fa-bounce"></i></a>
